syntax = "proto3";

package admin_member.v1;

option go_package = "./api/org/v1";

service Org{
  // 获取成员详情
  rpc Get(GetReq) returns (GetRes) {}
  // 获取成员列表
  rpc GetList(GetListReq) returns (GetListRes) {}
}

message GetReq{
  // 组织ID
  // v:required|integer|min:1#组织ID不能为空|组织ID必须是整数|组织ID不能小于1
  int64 id = 1;
}

message GetRes{
  // 组织ID
  int64 id = 1;
  // 上级id
  int64 parentId = 2;
  // 组织名称
  string name = 3;
  // 组织编码
  string code = 4;
  // 组织分类
  int64 type = 5;
  // 状态
  int64 status = 6;
  // 主管
  repeated Supervisor supervisors = 7;
}

// 主管信息
message Supervisor {
  // 主管ID
  int64 id = 1;
  // 主管名称
  string name = 2;
}

message GetListReq {
  // 组织名，模糊搜索
  string name = 1;
  // 上级id
  // v:integer|min:0#上级id必须是整数|上级id必须大于0
  int64 parentId = 2;
  // 组织编码
  string code = 3;
  // 组织分类
  // v:integer|min:0#组织分类不正确1|组织分类不正确2
  int64 type = 4;
  // 分页号码
  // v:min:0#分页号码错误
  int32 page = 5;
  // 分页数量，最大100
  // v:max:100#分页数量最大100条
  int32 limit = 6;
}

message GetListRes {
  // 数据列表
  repeated GetListItem list = 1;
  // 数据总数
  int64 total = 2;
}

message GetListItem {
  // 组织ID
  int64 id = 1;
  // 姓名
  string name = 2;
  // 组织分类
  int64 type = 3;
  // 组织编码
  string code = 4;
  // 状态
  int32 status = 5;
  // 创建时间
  string createAt = 6;
}